common/oidc-client/components/istio-oauth2-proxy/requestauthentication.dex-jwt.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: dex-jwt
  namespace: istio-system
spec:
  jwtRules:
    # forwardOriginalToken must be set to true so the authorization header will
    # be passed between Kubeflow Components and Istio can configure the
    # Kubeflow Auth Headers based on this request header.
    # Alternatives:
    # * configure oauth2-proxy to add custom headers
    #   kubeflow-userid and kubeflow-groups
    # * use component specific AuthorizationPolicies, so instead of one global
    #   AuthorizationPolicy istio-ingressgateway-oauth2-proxy
    - forwardOriginalToken: true
      issuer: http://dex.auth.svc.cluster.local:5556/dex
      outputClaimToHeaders:
        - header: kubeflow-userid
          claim: email
        - header: kubeflow-groups
          claim: groups
